feat: recurso de excluir venda inteira
